# actualism-app-old

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  justfile
.github/workflows/: nix.yml
src/: main.rs  state.rs
