[package]
name = "actualism-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0", features = ["fullstack"] }
dioxus-router = "0.5.0"
dioxus-signals = "0.5.0"
tokio = "1.32.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
